fix scaling on mobile devices with renderered height != vh

--- a/css/common.css
+++ b/css/common.css
@@ -148,3 +148,6 @@ body {
   overflow-y: auto;
   position: relative;
 }
+html {
+  height: 100%;
+}
